<resources>
    <!--    <string name="app_name">Login Usuário</string>-->
    <string name="user_accounts">Criar Login</string>
    <string name="text_hint_name">Nome</string>
    <string name="text_hint_user">Usuario</string>
    <string name="text_hint_password">Senha</string>
    <string name="text_hint_description">Descrição</string>
    <string name="text_save">Salvar</string>
    <string name="text_delete">Remover</string>
    <string name="account_button_update">Editar</string>
    <string name="account_inserted_successfully">Conta salva com sucesso</string>
    <string name="account_update_successfully">Conta editada com sucesso</string>
    <string name="account_error_to_insert">Erro ao salvar conta</string>
    <string name="account_error_to_update">Erro ao editar conta</string>
    <string name="account_deleted_successfully">Conta excluida com sucesso</string>
    <string name="account_error_to_delete">Erro ao excluir conta</string>
    <string name="list_user_accounts">Lista de Logins</string>
    <string name="text_erro_list">Ops! Nada Encontrado!</string>
    <string name="text_title">Crie/Edite suas informções de login</string>
    <string name="text_search">Pesquisa</string>
    <string name="text_version">Versão</string>
    <string name="text_share_app">Compartilhar App</string>
    <string name="text_search_login">Pesquisar Logins</string>
    <string name="text_assessment">Avalie nosso App</string>
</resources>