<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/appSearchBar"
        android:icon="@drawable/ic_search"
        android:title="@string/text_search"
        android:contentDescription="@string/text_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/assessment"
        android:title="@string/text_assessment"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:title="@string/text_share_app"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="never" />

    <item
        android:id="@+id/version"
        android:title="@string/text_version"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="never" />
</menu>